force-app/main/default/objects/Novidea_Document_Management__c/Novidea_Document_Management__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Novidea Document Management</label>
</CustomObject>