force-app/main/default/objects/Novidea_Document_Management__c/fields/AddinPage__c.field-meta.xml
<CustomField>
    <fullName>AddinPage__c</fullName>
    <label>AddinPage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>