force-app/main/default/objects/Novidea_Document_Management__c/fields/Auto_Set_Owner_Filter_In_Doc_Search__c.field-meta.xml
<CustomField>
    <fullName>Auto_Set_Owner_Filter_In_Doc_Search__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether to automatically set the owner filter to the current user when loading the document search module. The default is Yes</description>
    <label>Auto Set Owner Filter In Doc Search</label>
    <type>Checkbox</type>
</CustomField>