force-app/main/default/objects/Novidea_Document_Management__c/fields/Columnns_in_Search_Table__c.field-meta.xml
<CustomField>
    <fullName>Columnns_in_Search_Table__c</fullName>
    <defaultValue>&apos;subject,type,account,date_received,createddate,owner,comments&apos;</defaultValue>
    <description>A CSV representing the columns in the search table.
The csv can only hold a subset of the columns defined in the code in DocumentSearch</description>
    <label>Columnns in Search Table</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>