force-app/main/default/objects/Novidea_Document_Management__c/fields/Date_Format_Javascript_Function__c.field-meta.xml
<CustomField>
    <fullName>Date_Format_Javascript_Function__c</fullName>
    <defaultValue>&apos;formatDateWithTime&apos;</defaultValue>
    <label>Date Format Javascript Function</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>