force-app/main/default/objects/Novidea_Document_Management__c/fields/Display_Filing_Files__c.field-meta.xml
<CustomField>
    <fullName>Display_Filing_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if to display the &apos;Filing files&apos; button</description>
    <label>Display Filing Files</label>
    <type>Checkbox</type>
</CustomField>