force-app/main/default/objects/Novidea_Document_Management__c/fields/Display_filing_records__c.field-meta.xml
<CustomField>
    <fullName>Display_filing_records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if to display the &apos;Filing records&apos; button</description>
    <label>Display filing records</label>
    <type>Checkbox</type>
</CustomField>