force-app/main/default/objects/Novidea_Document_Management__c/fields/Display_Filing_scans__c.field-meta.xml
<CustomField>
    <fullName>Display_Filing_scans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if to display &apos;Filing scans&apos; button</description>
    <label>Display Filing scans</label>
    <type>Checkbox</type>
</CustomField>