force-app/main/default/objects/Novidea_Document_Management__c/fields/ExcelTemplatePath__c.field-meta.xml
<CustomField>
    <fullName>ExcelTemplatePath__c</fullName>
    <description>The path to the excel templates file used as a basis for the open new filed doc functionality</description>
    <label>ExcelTemplatePath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>