force-app/main/default/objects/Novidea_Document_Management__c/fields/Fax_Method__c.field-meta.xml
<CustomField>
    <fullName>Fax_Method__c</fullName>
    <description>describes the faxing method
0=No support to sending faxes
1=send fax through outlook
2=send fax through fax printer (requires also Fax_Printer_Name__c setting)
3=send fax through instructions file</description>
    <label>Fax Method</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>