force-app/main/default/objects/Novidea_Document_Management__c/fields/Fax_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number_Format__c</fullName>
    <description>Used To specify the format required for fax number. For example when using the outlook fax sending method one might want to prefix the number with some charachters</description>
    <label>Fax Number Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>