force-app/main/default/objects/Novidea_Document_Management__c/fields/Fax_Printer_Name__c.field-meta.xml
<CustomField>
    <fullName>Fax_Printer_Name__c</fullName>
    <label>Fax Printer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>