force-app/main/default/objects/Novidea_Document_Management__c/fields/Is_Outlook_Delete_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Outlook_Delete_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>determines whether the checkbox that allows deletion after filing from outlook is operational</description>
    <label>Is Outlook Delete Active</label>
    <type>Checkbox</type>
</CustomField>