force-app/main/default/objects/Novidea_Document_Management__c/fields/Network_Base_Path__c.field-meta.xml
<CustomField>
    <fullName>Network_Base_Path__c</fullName>
    <description>The base network directory path for storing the documents</description>
    <label>Network Base Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>