force-app/main/default/objects/Novidea_Document_Management__c/fields/Number_Of_Records_To_Show__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Records_To_Show__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Number Of Records To Show</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>