force-app/main/default/objects/Novidea_Document_Management__c/fields/Predefined_File_Selection_Dir__c.field-meta.xml
<CustomField>
    <fullName>Predefined_File_Selection_Dir__c</fullName>
    <description>A constant directory to start searching for files to file. In use in the process of file filing, through the file applet</description>
    <label>Predefined File Selection Dir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>