force-app/main/default/objects/Novidea_Document_Management__c/fields/Predefined_File_Selection_Dir_Scan__c.field-meta.xml
<CustomField>
    <fullName>Predefined_File_Selection_Dir_Scan__c</fullName>
    <description>path for scans</description>
    <label>Predefined File Selection Dir Scan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>