force-app/main/default/objects/Novidea_Document_Management__c/fields/Production_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Production_Document_Type__c</fullName>
    <description>The type of the Inbound Document for production files</description>
    <label>Production Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>