force-app/main/default/objects/Novidea_Document_Management__c/fields/Production_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Production_Folder_Name__c</fullName>
    <description>The name of the folder where production files will be stored.</description>
    <label>Production Folder Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>