force-app/main/default/objects/Novidea_Document_Management__c/fields/Show_Set_Private__c.field-meta.xml
<CustomField>
    <fullName>Show_Set_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to show the private checkbox</description>
    <label>Show Set Private</label>
    <type>Checkbox</type>
</CustomField>