force-app/main/default/objects/Novidea_Document_Management__c/fields/Single_SMS_Impl_Class__c.field-meta.xml
<CustomField>
    <fullName>Single_SMS_Impl_Class__c</fullName>
    <inlineHelpText>Class name that implements SingleSMSIterface</inlineHelpText>
    <label>Single SMS Impl Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>