force-app/main/default/objects/Novidea_Document_Management__c/fields/SMS_Single__c.field-meta.xml
<CustomField>
    <fullName>SMS_Single__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do show send SMS button for single SMS</inlineHelpText>
    <label>SMS Single</label>
    <type>Checkbox</type>
</CustomField>