force-app/main/default/objects/Novidea_Document_Management__c/fields/WordTemplatePath__c.field-meta.xml
<CustomField>
    <fullName>WordTemplatePath__c</fullName>
    <description>The path to the Word template document used as a basis for the open new filed doc functionality</description>
    <label>WordTemplatePath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>